# autowrapper

./: Cargo.toml  make_darts.bat
basic_test/: 1.json  2.json  make_darts.json  nmz.json  nmz_simple.json  wines.json  wines2.json
src/: actions.rs  cli.rs  key.rs  main.rs  mouse_button.rs  move_to_pos.rs  position.rs  scroll.rs  time.rs
src/reimpl/: point.rs  rect.rs
