[package]
name = "autowrapper"
version = "0.1.0"
authors = ["valarauca"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autopilot = "0.4.0"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0.57"
rand = "0.7.3"
clap = "2.33.3"
